# alinfrared

./: CMakeLists.txt  README.rst  qibuild.manifest  qiproject.xml
src/: CMakeLists.txt  alinfrared.cpp  alinfrared.h  infraredmain.cpp  paths.h
tests/: ALInfraredTest.py
